# src/main/java/org/girardsimon/wealthpay/account/domain/model/AccountStatus.java
@@ -1,5 +1,5 @@
 package org.girardsimon.wealthpay.account.domain.model;
 
 public enum AccountStatus {
-    ACTIVE, CLOSED;
+    OPENED, CLOSED;
 }
